--- a/common/footer.html
+++ b/common/footer.html
@@ -55,7 +55,7 @@
 
                             <!-- Footer links -->
                             <div class="footer_section footer_links">
-                                <div class="footer_title">...</div>
+                                <div class="footer_title">Thông tin thêm</div>
                                 <div class="footer_links_container">
                                     <ul>
                                         <li><a href="index.html">Trang chủ</a></li>
@@ -102,7 +102,7 @@
                     </div>
                     <div class="ml-lg-auto cr_links">
                         <ul class="cr_list">
-                            <li><a href="#">Copyright 2019</a></li>
+                            <li><a href="#">&#64; 2019 FPT Polytechnic</a></li>
                             <li><a href="#">Terms of Use</a></li>
                             <li><a href="#">Privacy Policy</a></li>
                         </ul>
