--- a/lien-he.html
+++ b/lien-he.html
@@ -52,8 +52,8 @@
 						<div class="contact_info_location">
 							<div class="contact_info_location_title">Hà Nội</div>
 							<ul class="location_list">
-								<li>Email: hieuttph04773@fpt.edu.vn</li>
-								<li>Phone: +(84) 974 511 405</li>
+								<li>Email: giapnvph05160@fpt.edu.vn</li>
+								<li>Phone: +(84) 329 425 439</li>
 								<li>15 Đông Quan Quan Hoa Cầu Giấy</li>
 							</ul>
 						</div>
