--- a/common/header.html
+++ b/common/header.html
@@ -5,7 +5,7 @@
                 <div class="col">
                     <div class="header_content d-flex flex-row align-items-center justify-content-start">
                         <div class="logo_container">
-                            <a href="#">
+                            <a href="#home">
                                 <div class="logo_text">Unic<span>at</span></div>
                             </a>
                         </div>
