--- a/common/footer.html
+++ b/common/footer.html
@@ -58,11 +58,11 @@
                                 <div class="footer_title">Thông tin thêm</div>
                                 <div class="footer_links_container">
                                     <ul>
-                                        <li><a href="index.html">Trang chủ</a></li>
-                                        <li><a href="about.html">Liên hệ</a></li>
-                                        <li><a href="courses.html">Hỏi đáp</a></li>
-                                        <li><a href="#">Đăng nhập</a></li>
-                                        <li><a href="#">Đăng ký</a></li>
+                                        <li><a href="#home">Trang chủ</a></li>
+                                        <li><a href="#contact">Liên hệ</a></li>
+                                        <li><a href="#ask">Hỏi đáp</a></li>
+                                        <li><a href="#login">Đăng nhập</a></li>
+                                        <li><a href="#login">Đăng ký</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -102,7 +102,7 @@
                     </div>
                     <div class="ml-lg-auto cr_links">
                         <ul class="cr_list">
-                            <li><a href="#">&#64; 2019 FPT Polytechnic</a></li>
+                            <li><a href="#">©2019 FPT Polytechnic</a></li>
                             <li><a href="#">Terms of Use</a></li>
                             <li><a href="#">Privacy Policy</a></li>
                         </ul>
