--- a/common/menu.html
+++ b/common/menu.html
@@ -25,7 +25,7 @@
 					<li class="menu_mm"><a href="gioi-thieu.html">Giới thiệu</a></li>
 					<li class="menu_mm"><a href="lien-he.html">Liên hệ</a></li>
 					<li class="menu_mm"><a href="danh-muc.html">Danh mục</a></li>
-					<li class="menu_mm"><a href="hoi-dap">Hỏi đáp</a></li>
+					<li class="menu_mm"><a href="hoi-dap.html">Hỏi đáp</a></li>
 				</ul>
 			</nav>
 		</div>
