--- a/lien-he.html
+++ b/lien-he.html
@@ -42,7 +42,7 @@
 					<div class="contact_info">
 						<div class="contact_info_title">Thông tin liên hệ</div>
 						<div class="contact_info_location">
-							<div class="contact_info_location_title">Hà Nội</div>
+							<div class="contact_info_location_title">Trần Trung Hiếu</div>
 							<ul class="location_list">
 								<li>Email: hieuttph04773@fpt.edu.vn</li>
 								<li>Phone: +(84) 974 511 405</li>
@@ -50,7 +50,7 @@
 							</ul>
 						</div>
 						<div class="contact_info_location">
-							<div class="contact_info_location_title">Hà Nội</div>
+							<div class="contact_info_location_title">Nguyễn Văn Giáp</div>
 							<ul class="location_list">
 								<li>Email: giapnvph05160@fpt.edu.vn</li>
 								<li>Phone: +(84) 329 425 439</li>
