--- a/thi.html
+++ b/thi.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.11.0.js"></script>
 <style>
     .pagination {
@@ -9,12 +9,12 @@
         border-radius: 4px
     }
 
-    .pagination>li {
+    .pagination > li {
         display: inline
     }
 
-    .pagination>li>a,
-    .pagination>li>span {
+    .pagination > li > a,
+    .pagination > li > span {
         position: relative;
         float: left;
         padding: 6px 12px;
@@ -26,34 +26,34 @@
         border: 1px solid #ddd
     }
 
-    .pagination>li:first-child>a,
-    .pagination>li:first-child>span {
+    .pagination > li:first-child > a,
+    .pagination > li:first-child > span {
         margin-left: 0;
         border-top-left-radius: 4px;
         border-bottom-left-radius: 4px
     }
 
-    .pagination>li:last-child>a,
-    .pagination>li:last-child>span {
+    .pagination > li:last-child > a,
+    .pagination > li:last-child > span {
         border-top-right-radius: 4px;
         border-bottom-right-radius: 4px
     }
 
-    .pagination>li>a:hover,
-    .pagination>li>span:hover,
-    .pagination>li>a:focus,
-    .pagination>li>span:focus {
+    .pagination > li > a:hover,
+    .pagination > li > span:hover,
+    .pagination > li > a:focus,
+    .pagination > li > span:focus {
         color: #23527c;
         background-color: #eee;
         border-color: #ddd
     }
 
-    .pagination>.active>a,
-    .pagination>.active>span,
-    .pagination>.active>a:hover,
-    .pagination>.active>span:hover,
-    .pagination>.active>a:focus,
-    .pagination>.active>span:focus {
+    .pagination > .active > a,
+    .pagination > .active > span,
+    .pagination > .active > a:hover,
+    .pagination > .active > span:hover,
+    .pagination > .active > a:focus,
+    .pagination > .active > span:focus {
         z-index: 2;
         color: #fff;
         cursor: default;
@@ -61,50 +61,50 @@
         border-color: #337ab7
     }
 
-    .pagination>.disabled>span,
-    .pagination>.disabled>span:hover,
-    .pagination>.disabled>span:focus,
-    .pagination>.disabled>a,
-    .pagination>.disabled>a:hover,
-    .pagination>.disabled>a:focus {
+    .pagination > .disabled > span,
+    .pagination > .disabled > span:hover,
+    .pagination > .disabled > span:focus,
+    .pagination > .disabled > a,
+    .pagination > .disabled > a:hover,
+    .pagination > .disabled > a:focus {
         color: #777;
         cursor: not-allowed;
         background-color: #fff;
         border-color: #ddd
     }
 
-    .pagination-lg>li>a,
-    .pagination-lg>li>span {
+    .pagination-lg > li > a,
+    .pagination-lg > li > span {
         padding: 10px 16px;
         font-size: 18px
     }
 
-    .pagination-lg>li:first-child>a,
-    .pagination-lg>li:first-child>span {
+    .pagination-lg > li:first-child > a,
+    .pagination-lg > li:first-child > span {
         border-top-left-radius: 6px;
         border-bottom-left-radius: 6px
     }
 
-    .pagination-lg>li:last-child>a,
-    .pagination-lg>li:last-child>span {
+    .pagination-lg > li:last-child > a,
+    .pagination-lg > li:last-child > span {
         border-top-right-radius: 6px;
         border-bottom-right-radius: 6px
     }
 
-    .pagination-sm>li>a,
-    .pagination-sm>li>span {
+    .pagination-sm > li > a,
+    .pagination-sm > li > span {
         padding: 5px 10px;
         font-size: 12px
     }
 
-    .pagination-sm>li:first-child>a,
-    .pagination-sm>li:first-child>span {
+    .pagination-sm > li:first-child > a,
+    .pagination-sm > li:first-child > span {
         border-top-left-radius: 3px;
         border-bottom-left-radius: 3px
     }
 
-    .pagination-sm>li:last-child>a,
-    .pagination-sm>li:last-child>span {
+    .pagination-sm > li:last-child > a,
+    .pagination-sm > li:last-child > span {
         border-top-right-radius: 3px;
         border-bottom-right-radius: 3px
     }
@@ -118,32 +118,34 @@
                 <div class="card-header">
                     <div class="row">
                         <div class="col-md-11">
-                                {{ title }}
+                            {{ title }}
                         </div>
                         <div class="col-md-1">
 
-                    <i ng-show="!showSt" class="fas fa-bell" style="margin-right: 5px"></i><span ng-show="!showSt" 
-                        style="color: red">{{counter | secondsToDateTime | date:'mm:ss'}}</span>
+                            <i ng-show="!showSt" class="fas fa-bell" style="margin-right: 5px"></i><span
+                                ng-show="!showSt"
+                                style="color: red">{{counter | secondsToDateTime | date:'mm:ss'}}</span>
+                        </div>
                     </div>
-                </div>
                 </div>
                 <!-- st -->
                 <div class="card-body" ng-show="showSt">
                     Thời gian làm bài gồm có 10 phút.
                     Có 10 câu hỏi theo từng mức độ khác nhau.
                     Bạn đã sẵn sàng chưa!
-                    <a href="" ng-click="start()" class="btn btn-primary" style="margin-left:950px; margin-top: -30px;">Bắt đầu test</a>
+                    <a href="" ng-click="start()" class="btn btn-primary" style="margin-left:950px; margin-top: -30px;">Bắt
+                        đầu !!!</a>
                 </div>
                 <!-- test -->
                 <div class="card-body" ng-show="showQs"
-                    ng-repeat="q in quizs.slice(((currentPage-1)*itemsPerPage), ((currentPage)*itemsPerPage))">
+                     ng-repeat="q in quizs.slice(((currentPage-1)*itemsPerPage), ((currentPage)*itemsPerPage))">
                     {{ currentPage }}. {{ q.Text }}
-                    <hr />
+                    <hr/>
                     <div class="form-check" ng-repeat="item in q.Answers">
                         <label class="form-check-label">
                             <input type="radio" ng-click="answerQuestion(currentPage ,{ selected: item.Id }, title)"
-                                name="item" class="form-check-input" ng-value="item.Id" ng-model="selectedListItem"
-                                ng-checked="chkchks(currentPage) === item.Id">{{ item.Text }}
+                                   name="item" class="form-check-input" ng-value="item.Id" ng-model="selectedListItem"
+                                   ng-checked="chkchks(currentPage) === item.Id">{{ item.Text }}
                         </label>
                     </div>
                 </div>
@@ -151,39 +153,45 @@
                 <div class="card-body" ng-show="showAs">
                     Bạn có chắc chắn muốn kết thúc bài test này?
                     <div><a href="">Số câu đã trả lời {{ lsns.length + '/10' }}</a></div>
-                    <a href="" ng-click="cancel()" class="btn btn-primary" style="margin-left:900px; margin-top: -30px;">Trở lại</a>
+                    <a href="" ng-click="cancel()" class="btn btn-primary"
+                       style="margin-left:900px; margin-top: -30px;">Trở lại</a>
                     <a href="" ng-click="finish()" class="btn btn-danger ml-1" style="margin-top: -30px;">Kết thúc</a>
                 </div>
                 <!-- fs -->
                 <div class="card-body" ng-show="showFs">
                     Điểm của bạn là: {{ mark }}
                     <div><a href="">Số câu đã trả lời {{ lsns.length + '/10' }}</a></div>
-                    <a href="" ng-click="success()" class="btn btn-danger" style="margin-left:950px; margin-top: -30px;">Xong</a>
+                    <a href="" ng-click="success()" class="btn btn-danger"
+                       style="margin-left:950px; margin-top: -30px;">Xong</a>
                 </div>
                 <div class="card-footer" ng-show="showQs">
                     Marks: {{ mark }}/10
 
                     <pagination ng-show="currentPage > 0 && currentPage < 9"
-                        style="margin-left: 730px; margin-top: 10px; margin-bottom: 0px" total-items="totalItems"
-                        ng-model="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true"
-                        items-per-page="itemsPerPage"></pagination>
+                                style="margin-left: 730px; margin-top: 10px; margin-bottom: 0px"
+                                total-items="totalItems"
+                                ng-model="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true"
+                                items-per-page="itemsPerPage"></pagination>
 
                     <pagination ng-show="currentPage == 9"
-                        style="margin-left: 720px; margin-top: 10px; margin-bottom: 0px" total-items="totalItems"
-                        ng-model="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true"
-                        items-per-page="itemsPerPage"></pagination>
+                                style="margin-left: 720px; margin-top: 10px; margin-bottom: 0px"
+                                total-items="totalItems"
+                                ng-model="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true"
+                                items-per-page="itemsPerPage"></pagination>
 
                     <pagination ng-show="currentPage == 10"
-                        style="margin-left: 630px; margin-top: 10px; margin-bottom: 0px" total-items="totalItems"
-                        ng-model="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true"
-                        items-per-page="itemsPerPage"></pagination>
+                                style="margin-left: 630px; margin-top: 10px; margin-bottom: 0px"
+                                total-items="totalItems"
+                                ng-model="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true"
+                                items-per-page="itemsPerPage"></pagination>
 
                     <button type="button" ng-show="currentPage == 10" class="btn btn-danger"
-                        style="cursor: pointer; margin-left: 10px; height: 30px; line-height: 10px; margin-top: -22px"
-                        ng-click="count()"> Kết thúc </button>
+                            style="cursor: pointer; margin-left: 10px; height: 30px; line-height: 10px; margin-top: -22px"
+                            ng-click="count()"> Kết thúc
+                    </button>
                 </div>
             </div>
-            
+
         </div>
     </div>
 </div>
