--- a/common/header.html
+++ b/common/header.html
@@ -17,7 +17,7 @@
                                 </li>
                             </ul>
                             <div ng-if="auth=='null'" class="search_button"><a href="#login" style="color: black; font-size: 18px !important"><i class="fa fa-user"
-                                        aria-hidden="true"></i> Login</a></div>
+                                        aria-hidden="true"></i> Đăng nhập</a></div>
                             <div ng-if="auth!='null'" class="dropdown" style="position: absolute; top: 25px; right: -90px;">
                                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" style=" cursor: pointer;"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -29,7 +29,7 @@
                                     <a class="dropdown-item" href="#fogot">Quên mật khẩu</a>
                                     <a class="dropdown-item" href="#login">Lịch sử thi</a>
                                     <hr>
-                                    <a class="dropdown-item" href="" ng-click="logout()">Logout</a>
+                                    <a class="dropdown-item" href="" ng-click="logout()">Đăng xuất</a>
                                 </div>
                             </div>
                             <div class="hamburger menu_mm">
