--- a/common/footer.html
+++ b/common/footer.html
@@ -62,7 +62,7 @@
                                         <li><a href="#contact">Liên hệ</a></li>
                                         <li><a href="#ask">Hỏi đáp</a></li>
                                         <li><a href="#login">Đăng nhập</a></li>
-                                        <li><a href="#login">Đăng ký</a></li>
+                                        <li><a href="#intro">Giới thiệu</a></li>
                                     </ul>
                                 </div>
                             </div>
