--- a/dang-nhap.html
+++ b/dang-nhap.html
@@ -38,7 +38,7 @@
 				</form>
 
 				<div>Chưa có tài khoản</div>
-				<div>Đăng ký ở <a href="#logon">đây</a></div>
+				<div>Đăng ký tại <a href="#logon">đây</a></div>
 			</div>
 			<div class="card-footer">
 				<a href="#/" class="btn btn-secondary" style="cursor: pointer">Close</a>
